--- a/stages/build.yml
+++ b/stages/build.yml
@@ -6,6 +6,8 @@
   rules:
     - if: $CI_MERGE_REQUEST_ID
       when: never
+    - if: $CI_COMMIT_TAG
+      when: never
     - if: $CI_COMMIT_BRANCH == "main"
       when: on_success
     - when: never
