--- a/stages/build.yml
+++ b/stages/build.yml
@@ -13,5 +13,5 @@
     - when: never
   script:
     - mkdir -p /kaniko/.docker
-    - echo "{\"auths\":{\"$REGISTRY\":{\"auth\":\"$(echo -n ${AWS_ACCESS_KEY_ID}:${AWS_SECRET_ACCESS_KEY} | base64)\"}}}" > /kaniko/.docker/config.json
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/dockerfile --destination $REPOSITORY/$IMAGE_NAME:$IMAGE_TAG
+    - echo "{\"auths\":{\"$REGISTRY\":{\"username\":\"${AWS_ACCESS_KEY_ID}\",\"password\":\"${AWS_SECRET_ACCESS_KEY}\"}}}" > /kaniko/.docker/config.json
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/dockerfile --destination $REGISTRY/$REPOSITORY/$IMAGE_NAME:$IMAGE_TAG
