configure aws creds in save-repo-info stage

--- a/stages/save-repo-info.yml
+++ b/stages/save-repo-info.yml
@@ -19,7 +19,13 @@
   variables:
     AWS_REPO_TABLE_NAME: git-repos
     ICON_URL: "${CI_PROJECT_URL}/raw/main/repo-icon.png"
+  before_script:
+    - aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
+    - aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
+    - aws configure set region ${AWS_DEFAULT_REGION}
+    - aws configure set output json
   script:
-    - aws dynamodb put-item \
-      --table-name ${AWS_REPOO_TABLE_NAME} \
-      --item {\"slug\":{\"S\":\"${CI_PROJECT_NAME}\"},\"title\":{\"S\":\"${CI_PROJECT_TITLE}\"},\"url\":{\"S\":\"${CI_PROJECT_URL}\"},\"version\":{\"S\":\"${VERSION}\"},\"icon\":{\"S\":\"${ICON_URL}\"}}
+    - |
+      aws dynamodb put-item \
+        --table-name ${AWS_REPOO_TABLE_NAME} \
+        --item {\"slug\":{\"S\":\"${CI_PROJECT_NAME}\"},\"title\":{\"S\":\"${CI_PROJECT_TITLE}\"},\"url\":{\"S\":\"${CI_PROJECT_URL}\"},\"version\":{\"S\":\"${VERSION}\"},\"icon\":{\"S\":\"${ICON_URL}\"}}
