--- a/stages/save-repo-info.yml
+++ b/stages/save-repo-info.yml
@@ -13,7 +13,7 @@
       when: never
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_BRANCH == "dev"
       when: on_success
     - when: never
   variables:
@@ -28,4 +28,4 @@
     - |
       aws dynamodb put-item \
       --table-name ${AWS_REPO_TABLE_NAME} \
-      --item '{"slug": {"S": "\"$CI_PROJECT_NAME\""}, "title": {"S": "$CI_PROJECT_TITLE"}, "url": {"S": "$CI_PROJECT_URL"}, "version": {"S": "$VERSION"}, "icon": {"S": "$ICON_URL"}}'
+      --item \'{"slug": {"S": "$CI_PROJECT_NAME"}, "title": {"S": "$CI_PROJECT_TITLE"}, "url": {"S": "$CI_PROJECT_URL"}, "version": {"S": "$VERSION"}, "icon": {"S": "$ICON_URL"}}\'
