--- a/stages/build.yml
+++ b/stages/build.yml
@@ -6,17 +6,17 @@
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   rules:
-    - if: $CI_MERGE_REQUEST_ID
-      when: never
-    - if: $CI_COMMIT_TAG
-      when: never
     - if: $CI_COMMIT_BRANCH == "main"
       when: on_success
     - when: never
   variables:
     CONTEXT: $CI_PROJECT_DIR
     DOCKERFILE: "${CI_PROJECT_DIR}/dockerfile"
+  parallel:
+    matrix:
+      - TAG: $IMAGE_TAG
+      - TAG: latest
   script:
     - mkdir -p /kaniko/.docker
     - echo "{\"credsStore\":\"ecr-login\"}" > /kaniko/.docker/config.json
-    - /kaniko/executor --context $CONTEXT --dockerfile $DOCKERFILE --destination $REGISTRY/$REPOSITORY:$IMAGE_TAG
+    - /kaniko/executor --context $CONTEXT --dockerfile $DOCKERFILE --destination $REGISTRY/$REPOSITORY:${IMAGE_NAME}_${TAG}
