update release and delete-latest-tag jopbs to use cicd-toolkit:latest image

--- a/stages/release.yml
+++ b/stages/release.yml
@@ -7,7 +7,7 @@
 .release:
   stage: release
   image:
-    name: public.ecr.aws/b9b5m9f7/base-images:cicd-toolkit_0.2
+    name: public.ecr.aws/b9b5m9f7/cicd-toolkit:latest
     entrypoint: [""]
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
