--- a/stages/delete-latest-tag.yml
+++ b/stages/delete-latest-tag.yml
@@ -6,7 +6,7 @@
 .delete-latest-tag:
   stage: pre-build
   image:
-    name: public.ecr.aws/b9b5m9f7/base-images:cicd-toolkit_0.2
+    name: public.ecr.aws/b9b5m9f7/cicd-toolkit:latest
     entrypoint: [""]
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
